<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="title_activity_books">Books</string>
  <string name="action_settings">Settings</string>
  <string name="action_add_book">Add Book</string>
  <string name="title_activity_add_book">Add</string>
  <string name="title_form_entry">Title</string>

  <string name="hello_world">Hello world!</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="authors_form_entry">Authors</string>
  <string name="isbn_form_entry">ISBN</string>
  <string name="title_activity_show_book">Book</string>
  <string name="action_write_tag_to_book">Write Tag</string>
  <string name="action_checkout_book">Checkout</string>
  <string name="action_import_api_key">Import Api Key</string>
  <string name="hint_book_id">Book ID:</string>
  <string name="hint_isbn">ISBN:</string>
  <string name="hint_title">Title:</string>
  <string name="hint_authors">Authors:</string>
  <string name="hint_owner">Owner:</string>
  <string name="hint_location">Location:</string>
  <string name="title_activity_first_run">First run master</string>
</resources>
